--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.brig.testplugin
-pluginName = test-plugin
+pluginGroup = brig.concord.concord-intellij
+pluginName = Concord Plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
@@ -11,11 +11,11 @@ pluginUntilBuild = 222.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension
 platformType = IC
-platformVersion = 2021.3.3
+platformVersion = 2022.2.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = org.jetbrains.plugins.yaml
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.5.1
