--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -1,3 +1,5 @@
 filetype.description.yaml=Concord language file
 
 ExpressionType.error.scalar.value=Expression value expected
+DurationType.error.scalar.value=ISO 8601 duration value expected
+RegexpType.error.scalar.value=Valid regular expression or string required
