--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -1,5 +1,8 @@
 filetype.description.yaml=Concord language file
 
+YamlUnknownValuesInspectionBase.error.object.is.required=Object value required
 ExpressionType.error.scalar.value=Expression value expected
 DurationType.error.scalar.value=ISO 8601 duration value expected
 RegexpType.error.scalar.value=Valid regular expression or string required
+IdentityElement.notfound.error.scalar.value=Unknown element
+TimezoneType.error.scalar.value=Valid timezone required
