--- a/qodana.yml
+++ b/qodana.yml
@@ -1,10 +1,10 @@
-# Qodana configuration:
-# https://www.jetbrains.com/help/qodana/qodana-yaml.html
-
-version: 1.0
+version: "1.0"
 profile:
   name: qodana.recommended
 exclude:
   - name: All
     paths:
       - .qodana
+      - .*.concord.yml
+  - name: UnstableApiUsage
+  - name: UnstableTypeUsedInSignature
