--- a/qodana.yml
+++ b/qodana.yml
@@ -1,5 +1,5 @@
 version: "1.0"
-linter: jetbrains/qodana-jvm:2022.2-eap
+linter: jetbrains/qodana-jvm-community:2022.2
 profile:
   name: qodana.recommended
 exclude:
