--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -11,3 +11,5 @@ RegexpType.error.scalar.value=Valid regular expression or string required. Error
 TimezoneType.error.scalar.value=Valid timezone required
 SwitchStepMetaType.error.missing.labels=Switch step requires at least one label
 StepElementMetaType.error.unknown.step=Unknown step
+
+Configuration.description=Process configuration values
