--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
         <completion.contributor implementationClass="brig.concord.completion.ConcordCompletions"
                                 order="first" language="yaml"/>
 
+        <documentationProvider order="first" implementation="brig.concord.documentation.ConcordDocumentationProvider" />
+
         <!-- inspections -->
         <localInspection displayName="Unknown keys" groupPath="OMT" language="Concord"
                          enabledByDefault="true" level="ERROR" groupName="Structure"
