--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -14,3 +14,4 @@ StepElementMetaType.error.unknown.step=Unknown step
 CallStepMetaType.error.undefinedFlow=Undefined flow
 
 Configuration.description=Process configuration values
+FlowDefinitionSearchEverywhereContributor.group.name=Flow Definition
