loop items as links to flow definition

--- a/src/test/resources/errors/tasks/021.concord.yml
+++ b/src/test/resources/errors/tasks/021.concord.yml
@@ -3,5 +3,5 @@ flows:
     - name: "123123"
       task: "boo"
       loop:
-        items: 1
+        items: "${myItems}"
         parallelism: one
