--- a/src/test/resources/errors/triggers/031.concord.yml
+++ b/src/test/resources/errors/triggers/031.concord.yml
@@ -4,3 +4,7 @@ triggers:
       entryPoint: "foo"
       timezone: "Europe/Moscow"
       trash: "unknown-attr"
+
+flows:
+  foo:
+    - log: "test"
