--- a/src/test/resources/ok/configuration/000.concord.yml
+++ b/src/test/resources/ok/configuration/000.concord.yml
@@ -39,3 +39,7 @@ configuration:
     truncateMaxStringLength: 133
     truncateMeta: true
     truncateOutVars: true
+
+flows:
+  main-test:
+    - log: "test"
