--- a/src/test/resources/ok/triggers/000.concord.yml
+++ b/src/test/resources/ok/triggers/000.concord.yml
@@ -53,3 +53,13 @@ triggers:
         - "one"
       arguments:
         k: v
+
+flows:
+  default:
+    - log: "test"
+
+  onConcordUpdate:
+    -  log: "test"
+
+  entryPoint:
+    - log: "test"
