--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -15,3 +15,5 @@ CallStepMetaType.error.undefinedFlow=Undefined flow
 
 Configuration.description=Process configuration values
 FlowDefinitionSearchEverywhereContributor.group.name=Flow Definition
+
+flawCall.usage.type=Flow call
