--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -2,6 +2,8 @@ filetype.description.yaml=Concord language file
 
 YamlUnknownValuesInspectionBase.error.object.is.required=Object value required
 
+invalid.value=Invalid value. Expected: {0}
+
 ConcordMetaType.error.object.is.required=Object value required
 ExpressionType.error.invalid.value=Invalid expression value
 StringType.error.scalar.value=String value expected
