--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@
 pluginGroup = brig.concord.concord-intellij
 pluginName = Concord Plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.2.0
+pluginVersion = 0.3.1-SNAPSHOT
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
+pluginSinceBuild = 232
 pluginUntilBuild = 232.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension
 platformType = IC
-platformVersion = 2023.1
+platformVersion = 2023.2.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
