--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 pluginGroup = brig.concord.concord-intellij
 pluginName = Concord Plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.3.1-SNAPSHOT
+pluginVersion = 0.3.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 232
