--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,8 +106,8 @@ jobs:
           path: ${{ github.workspace }}/build/reports/pluginVerifier
 
       # Run Qodana inspections
-      - name: Qodana - Code Inspection
-        uses: JetBrains/qodana-action@v2024.1
+#      - name: Qodana - Code Inspection
+#        uses: JetBrains/qodana-action@v2024.1
 
       # Prepare plugin archive content for creating artifact
       - name: Prepare Plugin Artifact
