--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = brig.concord.concord-intellij
-pluginName = Concord Plugin
+pluginName = Concord
 # SemVer format -> https://semver.org
 pluginVersion = 0.6.2
 
