--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -77,6 +77,13 @@ color.settings.yaml.anchor=Anchor/Alias
 inspections.duplicated.keys.name=Duplicated YAML keys
 inspections.group.name=Concord
 
+inspections.invalid.child.in.block.mapping=Invalid child element in a block mapping
+inspections.invalid.child.in.block.sequence=Invalid child element in a block sequence
+inspections.invalid.list.item.indent=Invalid list item indent
+inspections.invalid.key.indent=Invalid block mapping key indent
+
 YAMLDuplicatedKeysInspection.merge.quickfix.name=Merge duplicated sections
 YAMLDuplicatedKeysInspection.remove.key.quickfix.name=Remove key
 YAMLDuplicatedKeysInspection.duplicated.key=Key ''{0}'' is duplicated
+
+annotator.same.line.composed.value.message=It is forbidden to specify block composed value at the same line as key
