--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -87,3 +87,6 @@ YAMLDuplicatedKeysInspection.remove.key.quickfix.name=Remove key
 YAMLDuplicatedKeysInspection.duplicated.key=Key ''{0}'' is duplicated
 
 annotator.same.line.composed.value.message=It is forbidden to specify block composed value at the same line as key
+
+YAMLStructureViewDocument.element.name=Concord document
+YAMLStructureViewSequenceItem.element.name=Sequence Item
