--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,4 +1,3 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>brig.concord.intellij</id>
     <name>Concord</name>
@@ -7,76 +6,116 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <!-- Code style / formatting -->
         <virtualFileCustomDataProvider implementation="brig.concord.editing.CodeStyleSettingsCustomDataSynchronizer"/>
         <langCodeStyleSettingsProvider implementation="brig.concord.editing.CodeStyleSettingsProvider"/>
 
+        <lang.formatter language="Concord" implementationClass="brig.concord.formatter.YAMLFormattingModelBuilder"/>
+        <lang.commenter language="Concord" implementationClass="brig.concord.formatter.YAMLCommenter"/>
+        <lang.whiteSpaceFormattingStrategy language="Concord"
+                                           implementationClass="brig.concord.formatter.YamlWhiteSpaceFormattingStrategy"/>
+
+        <stripTrailingSpacesFilterFactory implementation="brig.concord.formatter.YamlStripTrailingSpacesFilterFactory"/>
+
+        <editor.backspaceModeOverride language="Concord"
+                                      implementationClass="com.intellij.codeInsight.editorActions.SmartBackspaceDisabler"/>
+
+        <!-- Editor smart actions -->
+        <enterHandlerDelegate implementation="brig.concord.smart.YAMLEnterAtIndentHandler" order="first"/>
+        <!-- NOTE: this is a second enter handler; ensure ordering/conditions are intended -->
+        <enterHandlerDelegate implementation="brig.concord.smart.ConcordYamlEnterAtIndentHandler" order="first"/>
+
+        <!-- Services / settings -->
         <applicationService serviceImplementation="brig.concord.smart.YAMLEditorOptions"/>
         <applicationSettings service="brig.concord.smart.YAMLEditorOptions"/>
 
         <projectService serviceImplementation="brig.concord.yaml.YAMLElementGenerator"/>
 
-        <lang.formatter language="Concord" implementationClass="brig.concord.formatter.YAMLFormattingModelBuilder"/>
-        <lang.commenter language="Concord" implementationClass="brig.concord.formatter.YAMLCommenter"/>
-        <lang.whiteSpaceFormattingStrategy language="Concord" implementationClass="brig.concord.formatter.YamlWhiteSpaceFormattingStrategy"/>
-        <lang.syntaxHighlighterFactory language="Concord" implementationClass="brig.concord.yaml.YAMLSyntaxHighlighterFactory"/>
+        <!-- Syntax highlighting / colors -->
+        <lang.syntaxHighlighterFactory
+                language="Concord"
+                implementationClass="brig.concord.highlighting.ConcordSyntaxHighlighterFactory"/>
 
-        <editor.backspaceModeOverride language="Concord" implementationClass="com.intellij.codeInsight.editorActions.SmartBackspaceDisabler"/>
+        <annotator
+                language="Concord"
+                implementationClass="brig.concord.highlighting.ConcordHighlightingAnnotator"/>
 
-        <enterHandlerDelegate implementation="brig.concord.smart.YAMLEnterAtIndentHandler" order="first"/>
-        <stripTrailingSpacesFilterFactory implementation="brig.concord.formatter.YamlStripTrailingSpacesFilterFactory"/>
+        <colorSettingsPage
+                implementation="brig.concord.highlighting.ConcordColorSettingsPage"/>
 
-        <colorSettingsPage implementation="brig.concord.yaml.YAMLColorsPage"/>
+        <!-- Color scheme additions -->
+        <additionalTextAttributes scheme="Default" file="colorSchemes/ConcordDefault.xml"/>
+        <additionalTextAttributes scheme="Darcula" file="colorSchemes/ConcordDarcula.xml"/>
 
-        <!-- YAML -->
-        <additionalTextAttributes scheme="Default" file="colorSchemes/default.xml"/>
-
+        <!-- Language / file type -->
         <lang.parserDefinition language="Concord"
                                implementationClass="brig.concord.ConcordParserDefinition"/>
 
-        <fileType name="Concord File" implementationClass="brig.concord.ConcordFileType"
-                  fieldName="INSTANCE" language="Concord"
-                  extensions="concord.yml" patterns="*.concord.yml;concord.yml;*.concord.yaml;concord.yaml"/>
+        <fileType name="Concord File"
+                  implementationClass="brig.concord.ConcordFileType"
+                  fieldName="INSTANCE"
+                  language="Concord"
+                  extensions="concord.yml"
+                  patterns="*.concord.yml;concord.yml;*.concord.yaml;concord.yaml"/>
 
+        <!-- Folding -->
         <lang.foldingBuilder language="Concord" implementationClass="brig.concord.folding.CronExpressionFolding"/>
-        <lang.foldingBuilder language="Concord" id="YAMLFolding" implementationClass="brig.concord.yaml.folding.YAMLFoldingBuilder"/>
+        <lang.foldingBuilder language="Concord"
+                             id="YAMLFolding"
+                             implementationClass="brig.concord.yaml.folding.YAMLFoldingBuilder"/>
 
+        <!-- Find usages / usage types -->
         <lang.findUsagesProvider language="Concord" implementationClass="brig.concord.FindUsageProvider"/>
         <usageTypeProvider implementation="brig.concord.FlowUsageTypeProvider"/>
 
+        <!-- References / completion / structure view -->
         <psi.referenceContributor language="Concord" implementation="brig.concord.ConcordYamlReferenceContributor"/>
-        <completion.contributor implementationClass="brig.concord.completion.ConcordCompletions"
-                                order="first" language="Concord"/>
+        <completion.contributor language="Concord"
+                                implementationClass="brig.concord.completion.ConcordCompletions"
+                                order="first"/>
 
-        <lang.psiStructureViewFactory language="Concord" implementationClass="brig.concord.structureView.ConcordStructureViewFactory"/>
+        <lang.psiStructureViewFactory language="Concord"
+                                      implementationClass="brig.concord.structureView.ConcordStructureViewFactory"/>
 
-<!--        <annotator language="Concord"-->
-<!--                   implementationClass="brig.concord.highlighter.HighlighterAnnotator"/>-->
-
-        <!-- disabled: performance issues -->
-<!--        <documentationProvider order="first" implementation="brig.concord.documentation.ConcordDocumentationProvider" />-->
-
+        <!-- Navigation -->
         <fileBasedIndex implementation="brig.concord.navigation.FlowNamesIndex"/>
         <searchEverywhereContributor implementation="brig.concord.navigation.FlowDefinitionSearchEverywhereContributor$Factory"/>
 
-        <enterHandlerDelegate implementation="brig.concord.smart.ConcordYamlEnterAtIndentHandler" order="first"/>
-
-        <annotator language="Concord" implementationClass="brig.concord.yaml.annotator.YAMLInvalidBlockChildrenErrorAnnotator"/>
+        <!-- Validation -->
+        <annotator language="Concord"
+                   implementationClass="brig.concord.yaml.annotator.YAMLInvalidBlockChildrenErrorAnnotator"/>
 
 
         <!-- inspections -->
-        <localInspection displayName="Unknown keys" groupPath="Concord" language="Concord"
-                         enabledByDefault="true" level="ERROR" groupName="Structure"
+        <localInspection language="Concord"
+                         displayName="Unknown keys"
+                         groupPath="Concord"
+                         groupName="Structure"
+                         enabledByDefault="true"
+                         level="ERROR"
                          implementationClass="brig.concord.inspection.UnknownKeysInspection"/>
-        <localInspection displayName="Missing keys" groupPath="Concord" language="Concord"
-                         enabledByDefault="true" level="ERROR" groupName="Structure"
+        <localInspection language="Concord"
+                         displayName="Missing keys"
+                         groupPath="Concord"
+                         groupName="Structure"
+                         enabledByDefault="true"
+                         level="ERROR"
                          implementationClass="brig.concord.inspection.MissingKeysInspection"/>
-        <localInspection displayName="Scalar values" groupPath="Concord" language="Concord"
-                         enabledByDefault="true" level="ERROR" groupName="Structure"
+        <localInspection language="Concord"
+                         displayName="Scalar values"
+                         groupPath="Concord"
+                         groupName="Structure"
+                         enabledByDefault="true"
+                         level="ERROR"
                          implementationClass="brig.concord.inspection.ValueInspection"/>
-        <localInspection language="Concord" bundle="messages.ConcordBundle"
-                         shortName="ConcordYAMLDuplicatedKeys" level="ERROR"
+
+        <localInspection language="Concord"
+                         bundle="messages.ConcordBundle"
+                         shortName="ConcordYAMLDuplicatedKeys"
+                         level="ERROR"
                          key="inspections.duplicated.keys.name"
-                         groupKey="inspections.group.name" enabledByDefault="true"
+                         groupKey="inspections.group.name"
+                         enabledByDefault="true"
                          implementationClass="brig.concord.yaml.inspections.YAMLDuplicatedKeysInspection"/>
     </extensions>
 
