--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,10 +152,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create v${{ needs.build.outputs.version }} \
-            --draft \
-            --title "v${{ needs.build.outputs.version }}" \
-            --notes "$(cat << 'EOM'
-          ${{ needs.build.outputs.changelog }}
-          EOM
-          )"
+          NOTES_FILE="release-notes.md"
+          
+          cat > "$NOTES_FILE" <<'EOF'
+            ${{ needs.build.outputs.changelog }}
+          EOF
+          
+          gh release create "v${{ needs.build.outputs.version }}" \
+          --draft \
+          --title "v${{ needs.build.outputs.version }}" \
+          --notes-file "$NOTES_FILE"
