--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -75,6 +75,8 @@ color.settings.yaml.comment=Comment
 color.settings.yaml.anchor=Anchor/Alias
 
 inspections.duplicated.keys.name=Duplicated YAML keys
+inspection.duplicate.keys.message=Duplicate key ''{0}'' in the same mapping
+
 inspections.group.name=Concord
 
 inspections.invalid.child.in.block.mapping=Invalid child element in a block mapping
