--- a/src/test/resources/errors/flowCallInputParams/000.concord.yml
+++ b/src/test/resources/errors/flowCallInputParams/000.concord.yml
@@ -18,7 +18,7 @@ flows:
   #   k2: boolean, optional, k2 definition
   #   k1: string, mandatory, k1 definition
   #   k3: number, k3 definition
-  #   k4: array, k4 definition
+  #   k4: object[], k4 definition
   #   k5: object, k5 definition
   #   k6: k6 definition
   ##
