--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -46,7 +46,7 @@ jobs:
           cache: gradle
 
       - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v3
+        uses: gradle/wrapper-validation-action@v4
 
       # Set environment variables
       - name: Export Properties
@@ -55,9 +55,9 @@ jobs:
         run: |
           set -euo pipefail
 
-          VERSION="$(./gradlew printVersion -q)"
-          NAME="$(./gradlew printPluginName -q)"
-          CHANGELOG="$(./gradlew printUnreleasedChangelog -q)"
+          VERSION="$(./gradlew printVersion -q --console=plain)"
+          NAME="$(./gradlew printPluginName -q --console=plain)"
+          CHANGELOG="$(./gradlew printUnreleasedChangelog -q --console=plain)"
 
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           echo "name=$NAME" >> "$GITHUB_OUTPUT"
