--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,8 @@ jobs:
         run: |
           set -euo pipefail
 
+          ./gradlew printVersion
+
           VERSION="$(./gradlew printVersion -q --console=plain 2>&1 | tr -d '\r' | awk 'NF{last=$0} END{print last}')"
           NAME="$(./gradlew printPluginName -q --console=plain 2>&1 | tr -d '\r' | awk 'NF{last=$0} END{print last}')"
           CHANGELOG="$(./gradlew printUnreleasedChangelog -q --console=plain 2>&1 | tr -d '\r')"
