--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -48,7 +48,6 @@ find.usages.document=document
 find.usages.unnamed=<unnamed>
 
 rename.same.name=Same name
-new.name.conflicts.with=Key conflicts with existing one: ''{0}''
 
 settings.comment.label=Comments
 
@@ -63,19 +62,14 @@ YAMLLanguageCodeStyleSettingsProvider.block.mapping.on.new.line=Block mapping on
 YAMLLanguageCodeStyleSettingsProvider.indent.sequence.value=Indent sequence value
 YAMLLanguageCodeStyleSettingsProvider.autoinsert.sequence.marker=Automatically insert hyphen on enter
 
-color.settings.yaml.name=Concord
-color.settings.yaml.key=Key
-color.settings.yaml.string=String
-color.settings.yaml.dstring=Double quoted string
-color.settings.yaml.scalar.list='|' block
-color.settings.yaml.scalar.text='>' block
-color.settings.yaml.text=Text
-color.settings.yaml.sign=Sign: brace, comma, etc
-color.settings.yaml.comment=Comment
-color.settings.yaml.anchor=Anchor/Alias
-
 inspections.duplicated.keys.name=Duplicated YAML keys
 inspection.duplicate.keys.message=Duplicate key ''{0}'' in the same mapping
+
+inspections.flow.documentation.name=Flow documentation issues
+inspection.flow.doc.duplicate.param=Duplicate parameter ''{0}'' in {1}: section
+inspection.flow.doc.unknown.type=Unknown type ''{0}''. Expected: string, boolean, int, integer, number, object, any (or array variants)
+inspection.flow.doc.unknown.keyword=Unknown keyword ''{0}''. Expected: mandatory or optional
+inspection.flow.doc.orphaned=Flow documentation is not followed by a flow definition
 
 inspections.group.name=Concord
 
@@ -84,11 +78,6 @@ inspections.invalid.child.in.block.sequence=Invalid child element in a block seq
 inspections.invalid.list.item.indent=Invalid list item indent
 inspections.invalid.key.indent=Invalid block mapping key indent
 
-YAMLDuplicatedKeysInspection.merge.quickfix.name=Merge duplicated sections
-YAMLDuplicatedKeysInspection.remove.key.quickfix.name=Remove key
-YAMLDuplicatedKeysInspection.duplicated.key=Key ''{0}'' is duplicated
-
 annotator.same.line.composed.value.message=It is forbidden to specify block composed value at the same line as key
 
-YAMLStructureViewDocument.element.name=Concord document
 YAMLStructureViewSequenceItem.element.name=Sequence Item
