--- a/src/main/resources/codeStyle/preview/indents.yml
+++ b/src/main/resources/codeStyle/preview/indents.yml
@@ -1,14 +1,10 @@
-type: Example config
-components:
-  - name: First component
-    description: Some short description of the first component
+flows:
+  default:
+    - log: "Hello, ${name}!"
 
-  - # Comment for the second component
-    name: Second component
-    description: Some short description of the second component
+configuration:
+  arguments:
+    name: "Concord"
+    jsonStyle: [ { x: y }, { x: z } ]
+  runtime: concord-v2
 
-  # A list of possible places the third component could be got from
-  - - first/possible/place
-    - second/possible/place
-
-  - { jsonStyle: [ {x: y}, {x: z} ] }
