duplicate flow name inspection

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -73,6 +73,9 @@ inspection.flow.doc.orphaned=Flow documentation is not followed by a flow defini
 
 inspections.group.name=Concord
 
+inspections.duplicate.flow.names.name=Duplicate flow names in scope
+inspection.duplicate.flow.name.message=Flow ''{0}'' is also defined in ''{1}''
+
 inspections.invalid.child.in.block.mapping=Invalid child element in a block mapping
 inspections.invalid.child.in.block.sequence=Invalid child element in a block sequence
 inspections.invalid.list.item.indent=Invalid list item indent
