flow docs: add type replacement quick fix

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -68,7 +68,7 @@ inspection.duplicate.keys.message=Duplicate key ''{0}'' in the same mapping
 inspections.flow.documentation.name=Flow documentation issues
 inspection.flow.doc.duplicate.param=Duplicate parameter ''{0}'' in {1}: section
 inspection.flow.doc.unknown.type=Unknown type ''{0}''. Expected: string, boolean, int, integer, number, object, any (or array variants)
-inspection.flow.doc.unknown.keyword=Unknown keyword ''{0}''. Expected: mandatory or optional
+inspection.flow.doc.unknown.keyword=Unknown keyword ''{0}''. Expected: mandatory|required or optional
 inspection.flow.doc.orphaned=Flow documentation is not followed by a flow definition
 
 inspections.group.name=Concord
@@ -84,3 +84,9 @@ inspections.invalid.key.indent=Invalid block mapping key indent
 annotator.same.line.composed.value.message=It is forbidden to specify block composed value at the same line as key
 
 YAMLStructureViewSequenceItem.element.name=Sequence Item
+
+inspection.flow.doc.fix.type=Change type to ''{0}''
+inspection.flow.doc.fix.type.family=Change parameter type
+
+inspection.flow.doc.fix.insert.closing.marker=Insert closing ## marker
+inspection.flow.doc.fix.show.duplicates=Show all duplicates
