add quick fix for unknown flow doc keywords

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -90,3 +90,6 @@ inspection.flow.doc.fix.type.family=Change parameter type
 
 inspection.flow.doc.fix.insert.closing.marker=Insert closing ## marker
 inspection.flow.doc.fix.show.duplicates=Show all duplicates
+
+inspection.flow.doc.fix.keyword=Change keyword to ''{0}''
+inspection.flow.doc.fix.keyword.family=Change parameter keyword
